--- a/locale/fr.po
+++ b/locale/fr.po
@@ -1,27 +1,26 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) 2020 Endless OS LCC
+# French translations for hack-extension package.
+# Copyright (C) 2020 THE hack-extension'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the hack-extension package.
-# Daniel Garcia <daniel@endlessm.com>, 2020.
+# Automatically generated, 2020.
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: hack-extension\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-04-20 11:13+0200\n"
-"PO-Revision-Date: 2020-04-17 08:40-0700\n"
-"Last-Translator: Daniel Garcia <daniel@endlessm.com>\n"
-"Language-Team: Spanish (http://www.transifex.com/endless-os/gnome-shell/language/es/)\n"
-"Language: es\n"
+"PO-Revision-Date: 2020-04-20 11:13+0200\n"
+"Last-Translator: Automatically generated\n"
+"Language-Team: none\n"
+"Language: fr\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=ASCII\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
 #. Translators: The 'Endless Hack' is not translatable, it's the brand name
 #: ui/appDisplay.js:201
 msgid "Endless Hack: Unlock infinite possibilities through coding"
-msgstr "Endless Hack: desbloquea una infinidad de posibilidades"
+msgstr "Hack de chez Endless : débloquez des possibilités infinies par le biais de la programmation."
 
 #. Translators: The 'Hack' is not translatable, it's the brand name
 #: ui/appDisplay.js:203
@@ -30,9 +29,9 @@ msgid ""
 "foundations of programming and creative problem-solving to kids, ages 10 and "
 "up. With 5 different pathways, Hack has a variety of activities that teach a "
 "wide range of skills and concepts - check it out!"
-msgstr "Hack es una nueva plataforma de aprendizaje de Endless, enfocada en enseñar los fundamentos de programación y resolución de problemas a jóvenes mayores a diez años. Con cinco caminos posibles, Hack brinda una variedad de actividades que explican un amplio rango de habilidades y conceptos. ¡Échale un vistazo!"
+msgstr "Hack est une nouvelle plate-forme d'apprentissage proposée par Endless et qui se concentre sur le fait d'enseigner aux enfants de 10 ans et plus les bases de la programmation et de la résolution créative de problèmes. Avec cinq parcours différents, Hack propose toute une variété d'activités qui enseignent un large éventail de compétences et de concepts – jetez-y un œil ! "
 
 #: ui/appDisplay.js:293
 #, javascript-format
 msgid "%s has been removed"
-msgstr "%s se ha eliminado"
+msgstr "%s a été supprimé"
