--- a/locale/sw.po
+++ b/locale/sw.po
@@ -1,27 +1,25 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) 2020 Endless OS LCC
+# Swahili translations for hack-extension package.
+# Copyright (C) 2020 THE hack-extension'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the hack-extension package.
-# Daniel Garcia <daniel@endlessm.com>, 2020.
+# Automatically generated, 2020.
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: hack-extension\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-04-20 11:13+0200\n"
-"PO-Revision-Date: 2020-04-17 08:40-0700\n"
-"Last-Translator: Daniel Garcia <daniel@endlessm.com>\n"
-"Language-Team: Spanish (http://www.transifex.com/endless-os/gnome-shell/language/es/)\n"
-"Language: es\n"
+"PO-Revision-Date: 2020-04-20 11:13+0200\n"
+"Last-Translator: Automatically generated\n"
+"Language-Team: none\n"
+"Language: sw\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=ASCII\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #. Translators: The 'Endless Hack' is not translatable, it's the brand name
 #: ui/appDisplay.js:201
 msgid "Endless Hack: Unlock infinite possibilities through coding"
-msgstr "Endless Hack: desbloquea una infinidad de posibilidades"
+msgstr "Endless Hack: Fungua uwezekano usio na kipimo kupitia utunzi wa coding"
 
 #. Translators: The 'Hack' is not translatable, it's the brand name
 #: ui/appDisplay.js:203
@@ -30,9 +28,9 @@ msgid ""
 "foundations of programming and creative problem-solving to kids, ages 10 and "
 "up. With 5 different pathways, Hack has a variety of activities that teach a "
 "wide range of skills and concepts - check it out!"
-msgstr "Hack es una nueva plataforma de aprendizaje de Endless, enfocada en enseñar los fundamentos de programación y resolución de problemas a jóvenes mayores a diez años. Con cinco caminos posibles, Hack brinda una variedad de actividades que explican un amplio rango de habilidades y conceptos. ¡Échale un vistazo!"
+msgstr "Hack ni jukwaa mpya la kujifunza kutoka kwa Kutokuwa na mwisho, lililenga kufundisha misingi ya programu na utatuzi wa shida kwa watoto, wenye umri wa miaka 10 na kuendelea. Na njia 5 tofauti, Hack ina shughuli mbali mbali ambazo hufundisha ustadi na dhana mbali mbali - angalia!"
 
 #: ui/appDisplay.js:293
 #, javascript-format
 msgid "%s has been removed"
-msgstr "%s se ha eliminado"
+msgstr "%simeondolewa"
