--- a/locale/zh_TW.po
+++ b/locale/zh_TW.po
@@ -1,27 +1,25 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) 2020 Endless OS LCC
+# Chinese translations for hack-extension package.
+# Copyright (C) 2020 THE hack-extension'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the hack-extension package.
-# Daniel Garcia <daniel@endlessm.com>, 2020.
+# Automatically generated, 2020.
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: hack-extension\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-04-20 11:13+0200\n"
-"PO-Revision-Date: 2020-04-17 08:40-0700\n"
-"Last-Translator: Daniel Garcia <daniel@endlessm.com>\n"
-"Language-Team: Spanish (http://www.transifex.com/endless-os/gnome-shell/language/es/)\n"
-"Language: es\n"
+"PO-Revision-Date: 2020-04-20 11:13+0200\n"
+"Last-Translator: Automatically generated\n"
+"Language-Team: none\n"
+"Language: zh_TW\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=ASCII\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #. Translators: The 'Endless Hack' is not translatable, it's the brand name
 #: ui/appDisplay.js:201
 msgid "Endless Hack: Unlock infinite possibilities through coding"
-msgstr "Endless Hack: desbloquea una infinidad de posibilidades"
+msgstr "Endless Hack：透過程式語言解鎖無限可能"
 
 #. Translators: The 'Hack' is not translatable, it's the brand name
 #: ui/appDisplay.js:203
@@ -30,9 +28,9 @@ msgid ""
 "foundations of programming and creative problem-solving to kids, ages 10 and "
 "up. With 5 different pathways, Hack has a variety of activities that teach a "
 "wide range of skills and concepts - check it out!"
-msgstr "Hack es una nueva plataforma de aprendizaje de Endless, enfocada en enseñar los fundamentos de programación y resolución de problemas a jóvenes mayores a diez años. Con cinco caminos posibles, Hack brinda una variedad de actividades que explican un amplio rango de habilidades y conceptos. ¡Échale un vistazo!"
+msgstr "Hack 是 Endless 新推出的學習平台，旨在教導 10 歲以上孩童程式設計和創意解決問題的基礎。Hack 利用 5 種不同方式，提供各種活動來教導廣泛技巧和概念，快來看看吧！"
 
 #: ui/appDisplay.js:293
 #, javascript-format
 msgid "%s has been removed"
-msgstr "%s se ha eliminado"
+msgstr "已移除 %s"
